# poisson-recon

./: .gitignore  CMakeLists.txt  README.md  compile.sh  convert.sh  demo.py  dev_setup.sh  eval.py  render.py  run.sh  sample.py  server.py  setup.sh  test.py
include/: cmd.h  normal_estimate.h  path.h  poisson_params.h  poisson_reconstructor.h
poisson_recon/Cpp/: main.cpp
poisson_recon/Cpp/include/: poisson_reconstructor.h
poisson_recon/Cpp/src/: poisson_reconstructor.cpp
poisson_recon/Data/: poisson_params.py
poisson_recon/Demo/: evaluator.py  metric_renderer.py  poisson_evaluator.py  poisson_params_sampler.py  poisson_reconstructor.py  server.py
poisson_recon/Method/: cmd.py  metric.py  render.py
poisson_recon/Metric/: chamfer.py
poisson_recon/Module/: evaluator.py  metric_renderer.py  poisson_evaluator.py  poisson_params_sampler.py  poisson_reconstructor.py  server.py
poisson_recon/Test/: noise.py
src/: cmd.cpp  main.cpp  normal.cpp  normal_estimate.cpp  path.cpp  poisson_params.cpp  poisson_reconstructor.cpp
